--- a/nasa_apka/nasa_apka/Page1Xaml.xaml
+++ b/nasa_apka/nasa_apka/Page1Xaml.xaml
@@ -2,10 +2,14 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
 			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
 			 x:Class="nasa_apka.Page1Xaml"
-			 Title="Page 1">
+			 Title="Úvod">
     <ContentPage.Content>
         <StackLayout>
-            <Button x:Name="button" Text="Next Page" Clicked="OnNextPageButtonClicked" VerticalOptions="CenterAndExpand" />
+
+            <Label
+             Grid.Row="1"
+            Text="Suhlasíte, že Vás to môže omylom zabiť?"/>
+            <Button x:Name="button" Text="Súhlasím" Clicked="OnNextPageButtonClicked" VerticalOptions="CenterAndExpand" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
