--- a/nasa_apka/nasa_apka/Page2Xaml.xaml
+++ b/nasa_apka/nasa_apka/Page2Xaml.xaml
@@ -2,11 +2,14 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
 			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
 			 x:Class="nasa_apka.Page2Xaml"
-			 Title="Page 2">
+			 Title="Príznaky">
     <ContentPage.Content>
         <StackLayout>
-            <Button x:Name="nextButton" Text="Next Page" Clicked="OnNextPageButtonClicked" VerticalOptions="CenterAndExpand" />
+            <Button x:Name="nextPageButton" Text="Bolesť hlavy" Clicked="OnNextPageButtonClicked" VerticalOptions="CenterAndExpand" />
             <Button x:Name="previousButton" Text="Previous Page" Clicked="OnPreviousPageButtonClicked" VerticalOptions="CenterAndExpand" />
+            <Button x:Name="nextPageButtonA" Text="Bolesť brucha" Clicked="OnNextPageButtonClickedA" VerticalOptions="CenterAndExpand" />
+            <Button x:Name="nextPageButtonB" Text="Vypadávanie vlasov" Clicked="OnNextPageButtonClickedB" VerticalOptions="CenterAndExpand" />
+            <Button x:Name="nextPageButtonC" Text="Bolesť hrdla" Clicked="OnNextPageButtonClickedC" VerticalOptions="CenterAndExpand" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
