--- a/nasa_apka/nasa_apka/Page4Xaml.xaml
+++ b/nasa_apka/nasa_apka/Page4Xaml.xaml
@@ -1,12 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="nasa_apka.Page4Xaml">
+﻿<?xml version="1.0" encoding="UTF-8"?>
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
+			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+			 x:Class="nasa_apka.Page4Xaml"
+			 Title="Lieky">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <Label Grid.Row="1"
+            Text="Pomôže Vám toto: ..."/>
+            <Button x:Name="previousButton" Text="Predchádzajúca strana" Clicked="OnPreviousPageButtonClicked" VerticalOptions="CenterAndExpand" />
+            <Button x:Name="rootButton" Text="Hlavná strana" Clicked="OnRootPageButtonClicked" VerticalOptions="CenterAndExpand" />
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
